################################################################################
# Project configuration and settings
################################################################################
cmake_minimum_required(VERSION 3.15.0)

project(Espresso)

################################################################################
# Package content
################################################################################
add_subdirectory(src/espresso/)
