# --------------------------- BEGIN NOTES ---------------------------

####### TO INSTALL #######
# pip install .                           # core only, or
# python espresso_machine/build_package/build.py     # with contributions

####### TO TEST #######
# python espresso_machine/build_package/validate.py --pre
# python espresso_machine/build_package/validate.py --post

####### TO FORMAT #######
# black --check src/espresso
# black src/espresso

####### PYLINT #######
# pylint src/espresso

# --------------------------- END NOTES -----------------------------
[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "geo-espresso"
description = "Earth Science PRoblems for the Evaluation of Strategies, Solvers and Optimizers"
authors = [{name = "InLab, Espresso development team"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["inversion", "inference", "python package", "geoscience", "geophysics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "numpy>=1.18",
    "scipy>=1.0.0",
    "matplotlib>=3.1",
]
dynamic = ["version"]

[tool.hatch.build]
artifacts = ["src/espresso/_version.py"]
targets.wheel.packages = ["src/espresso", "src/espresso/utils"]
targets.sdist.sources = ["src/espresso"]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}.core"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty.core"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty.core"

[tool.versioningit.write]
file = "src/espresso/_version.py"

[tool.black]
line-length = 88
target_version = ['py38']
experimental_string_processing = true
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.vscode
    | build
    | lib.*
    | dist
    | _skbuild
  )/
  | tests
)
'''
