# --------------------------- BEGIN NOTES ---------------------------

####### TO INSTALL #######
# pip install .                           # core only, or
# python espresso_machine/build_package/build.py     # with contributions

####### TO TEST #######
# python espresso_machine/build_package/validate.py --pre
# python espresso_machine/build_package/validate.py --post

####### TO FORMAT #######
# black --check src/espresso
# black src/espresso

####### PYLINT #######
# pylint src/espresso

# --------------------------- END NOTES -----------------------------
[build-system]
requires = ["scikit-build-core", "numpy", "cython", "versioningit"]
build-backend = "scikit_build_core.build"

[project]
name = "geo-espresso"
description = "Earth Science PRoblems for the Evaluation of Strategies, Solvers and Optimizers"
authors = [{name = "InLab, Espresso development team"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["inversion", "inference", "python package", "geoscience", "geophysics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C",
    "Programming Language :: Cython", 
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "License :: Other/Proprietary License"
]
dependencies = [
    "numpy>=1.18",
    "scipy>=1.0.0",
    "matplotlib>=3.1",
    "tqdm>=4.0",
    "mpmath>=1.2.0",
    "cython",
    "seislib>=0.6.26",
    "pyrf96>=0.1.0",
    "pyhk>=0.1.0",
]
dynamic = ["version"]

[tool.scikit-build]
experimental = true

[tool.scikit-build.metadata.version]
provider = "versioning"
provider-path = "src/espresso/_machine"

[tool.black]
line-length = 88
target_version = ['py38']
experimental_string_processing = true
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.vscode
    | build
    | lib.*
    | dist
    | _skbuild
  )/
  | tests
)
'''
