install(FILES __init__.py DESTINATION .)
install(FILES _version.py DESTINATION .)
install(FILES exceptions.py DESTINATION .)
install(DIRECTORY utils DESTINATION .)
install(DIRECTORY fmm_tomography DESTINATION .)
add_subdirectory(fmm_tomography)
install(DIRECTORY xray_tomography DESTINATION .)
install(DIRECTORY gravity_density DESTINATION .)
install(DIRECTORY simple_regression DESTINATION .)
