install(FILES __init__.py DESTINATION .)
install(FILES _version.py DESTINATION .)
install(FILES exceptions.py DESTINATION .)
install(DIRECTORY utils DESTINATION .)
install (DIRECTORY _machine DESTINATION .)
install(DIRECTORY _gravity_inversion DESTINATION .)
install(DIRECTORY _receiver_function_inversion_shibutani DESTINATION .)
add_subdirectory(_receiver_function_inversion_shibutani)
install(DIRECTORY _pumping_test DESTINATION .)
install(DIRECTORY _surface_wave_tomography DESTINATION .)
install(DIRECTORY _fmm_tomography DESTINATION .)
add_subdirectory(_fmm_tomography)
install(DIRECTORY _slug_test DESTINATION .)
install(DIRECTORY _magnetotelluric_1D DESTINATION .)
install(DIRECTORY _xray_tomography DESTINATION .)
install(DIRECTORY _receiver_function_inversion_knt DESTINATION .)
add_subdirectory(_receiver_function_inversion_knt)
install(DIRECTORY _simple_regression DESTINATION .)
