install(FILES __init__.py DESTINATION espresso)
install(FILES _version.py DESTINATION espresso)
install(FILES _espresso_problem.py DESTINATION espresso)
install(FILES exceptions.py DESTINATION espresso)
install(DIRECTORY utils DESTINATION espresso)
install(DIRECTORY _machine DESTINATION espresso)
install(FILES capabilities.py DESTINATION espresso)
install(DIRECTORY _receiver_function_inversion_shibutani DESTINATION espresso)
add_subdirectory(_receiver_function_inversion_shibutani)
