install(FILES __init__.py DESTINATION espresso)
install(FILES _version.py DESTINATION espresso)
install(FILES _espresso_problem.py DESTINATION espresso)
install(FILES exceptions.py DESTINATION espresso)
install(DIRECTORY utils DESTINATION espresso)
install(DIRECTORY _machine DESTINATION espresso)
install(FILES capabilities.py DESTINATION espresso)
install(DIRECTORY _fmm_tomography DESTINATION espresso)
add_subdirectory(_fmm_tomography)
install(DIRECTORY _simple_regression DESTINATION espresso)
install(DIRECTORY _receiver_function_inversion_shibutani DESTINATION espresso)
install(DIRECTORY _xray_tomography DESTINATION espresso)
install(DIRECTORY _pumping_test DESTINATION espresso)
install(DIRECTORY _slug_test DESTINATION espresso)
install(DIRECTORY _gravity_inversion DESTINATION espresso)
install(DIRECTORY _receiver_function_inversion_knt DESTINATION espresso)
add_subdirectory(_receiver_function_inversion_knt)
install(DIRECTORY _surface_wave_tomography DESTINATION espresso)
install(DIRECTORY _magnetotelluric_1D DESTINATION espresso)
