################

[metadata]
name = inversion-test-problems
# version = attr: inversiontestproblems-h-hollmann 0.0.1 .contrib._version.__version__
# version = 0.0.11
author: InLab
description: A suite of forward codes for inversion testing.
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
# packages = find:
install_requires =
    requests
    importlib-metadata; python_version < "3.8"

# package_dir =
#     testdummy.Ex1 = contrib/Ex1_dir
#     testdummy.Ex2 = contrib/Ex2_dir
#     testdummy.Ex3 = contrib/Ex3_dir
#     testdummy.Ex4 = contrib/Ex4_dir
#

[options.packages.find]
where = contrib
